[metadata]
# replace with your username:
name = gopt
version = 0.0.1
url = https://github.com/GuillaumeLeclerc/gopt
author = Guillaume Leclerc
author_email = leclerc@mit.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A fast global optimization framework
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
